# mysql-manager

./: .dockerignore  .env  .env-test  .gitignore  Dockerfile  LICENSE  README.md  TODO  TODO.md  changelog  dev-docker-compose.yaml  docker-compose.yaml  pip.conf  pyproject.toml  requirements.test.txt  requirements.txt
.github/workflows/: main.yml
cli/: mysql-cli.py
configs/mm/: cluster-spec.yaml
configs/mysql/: mysql_1.cnf  mysql_2.cnf
configs/proxysql/: proxysql.cnf
docs/: architecture.md  contributing.md  getting-started.md  migration.md
features/: environment.py  failover.feature  mysql-add-replica.feature  mysql-and-proxysql.feature  startup.feature
features/steps/: helpers.py  startup.py
helpers/: clone_helper.py
mysql_manager/: base.py  clone_exceptions.py  cluster.py  cluster_data_handler.py  constants.py  dto.py  enums.py  etcd.py  exceptions.py  instance.py  metrics.py  new.py  proxysql.py  tests.py
mysql_manager/exceptions/: __init__.py  clone_exceptions.py  exceptions.py
scripts/: check-servers-up.py  start-replication-cli.sh  start-replication-with-proxysql-cli.sh  start-replication-with-proxysql.py  start-replication.py  start-simple-with-proxysql-cli.sh  start-simple-with-proxysql.py
tests/: cli-mysql-1-proxysql.sh  cli-mysql-1-to-2-proxysql.sh  cli-mysql-2-proxysql-failover.sh  cli-mysql-2-proxysql.sh  cli-mysql-2.sh  mysql-replication-with-proxysql.sh  mysql_replication.sh  mysql_replication_with_proxysql.sh  script-mysql-1-proxysql.sh  script-mysql-2-proxysql.sh  script-mysql-2.sh  setup-etcd.sh  setup.sh
(+39 files in other folders)
