[tool.poetry]
name = "mysql-manager"
version = "0.1.0"
description = ""
authors = ["aliakbar <aliakbar@hamravesh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "^1.1.0"
cryptography = "^42.0.8"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
