[tool.poetry]
name = "mysql-manager"
version = "0.2.0"
description = ""
authors = ["aliakbar <aliakbar@hamravesh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "^1.1.0"
cryptography = "^42.0.8"
click = "^8.1.7"
testcontainers = "^4.8.0"
pyyaml = "^6.0.2"
prometheus-client = "^0.20.0"
python-etcd = "^0.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
